--- a/styles.css
+++ b/styles.css
@@ -56,14 +56,13 @@ nav {
     transform: translateY(-50%);
 }
 
-.circle {
+#circle {
     width: 1000px;
     height: 1000px;
     position: absolute;
     top: 0;
     left: 0;
     border-radius: 50%;
-    background: #ccc;
 }
 
 .feature {
@@ -108,4 +107,29 @@ nav {
     left: 35%;
     transform: translateY(-50%);
     z-index: 1;
+}
+
+.controls {
+    position: absolute;
+    right: 10%;
+    transform: translateY(-50%);
+    top: 50%;
+    text-align: center;
+
+}
+
+.controls h3 {
+    margin: 15px 0;
+    color: #fff;
+}
+
+#upBtn {
+    width: 15px;
+    cursor: pointer;
+}
+
+#downBtn {
+    width: 15px;
+    cursor: pointer;
+    transform: rotate(180deg);
 }
